# obs-plugintemplate

./: CMakeLists.txt
src/: PluginMain.cpp  TelegramIntegration.cpp  TelegramIntegration.h  TwitchIntegration.cpp  TwitchIntegration.h  interface.ui
